<resources>
    <string name="app_name">絵カードサポート</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">絵カードサポート</string>
    <string name="second_fragment_label">アクション一覧</string>
    <string name="test">Alarm10test</string>
    <string name="cancel">キャンセル</string>
    <string name="close">閉じる</string>
    <string name="action_title">アクション名</string>
    <string name="card_regist">絵カード登録</string>
    <string name="open_action">表示する</string>
    <string name="new_alarm">新規アクション作成</string>
    <string name="alarmList">アクション一覧</string>
    <string name="help">使い方をみる</string>
    <string name="action_delete">削除</string>
    <string name="action_save">保存</string>
    <string name="action_delete_message">アクションを削除しました</string>
    <string name="request_code">request_code</string>
    <string name="alarm_id">alarm_id</string>
    <string name="hello_first_fragment">絵カードサポートへようこそ</string>
    <string name="title_activity_input_alarm">InputAlarmActivity</string>
    <string name="title_activity_alarm">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="sunday">日</string>
    <string name="monday">月</string>
    <string name="tuesday">火</string>
    <string name="wednesday">水</string>
    <string name="thursday">木</string>
    <string name="friday">金</string>
    <string name="saturday">土</string>
</resources>