<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp"
    android:fillViewport="true"
    tools:context=".InputAlarmActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="-3dp" />

    <TimePicker
        android:id="@+id/time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:headerBackground="@color/design_default_color_primary"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarInput" />

    <LinearLayout
        android:id="@+id/week_checkbox_lauout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/time_picker">

        <CheckBox
            android:id="@+id/checkBox_sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/red"
            android:text="@string/sunday" />
        <CheckBox
            android:id="@+id/checkBox_monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/monday" />
        <CheckBox
            android:id="@+id/checkBox_tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tuesday" />
        <CheckBox
            android:id="@+id/checkBox_wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wednesday" />
        <CheckBox
            android:id="@+id/checkBox_thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thursday" />
        <CheckBox
            android:id="@+id/checkBox_friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/friday" />
        <CheckBox
            android:id="@+id/checkBox_saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/bule"
            android:text="@string/saturday" />

    </LinearLayout>


    <TextView
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/week_lauout" />

    <EditText
        android:id="@+id/editAlarmText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_title" />

    <Button
        android:id="@+id/button_intoImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_regist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAlarmText" />

    <Button
        android:id="@+id/button_rotate_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="⤵"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@+id/editAlarmText"
        app:layout_constraintLeft_toRightOf="@+id/button_intoImage"/>

    <ImageView
        android:id="@+id/imageView_Card"
        android:layout_width="408dp"
        android:layout_height="315dp"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toBottomOf="@+id/button_intoImage" />




</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
